#task-8 добавлены методы обноввления и мультдобавления сущности и тесты на них
